(Gapp-2) Completes list prototype. Creates star and delete button. Creates search input. Adds font-awesome icons. Fixes navbar. Impleme;2Dnts bew components.

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,10 @@
   color: #61dafb;
 }
 
+.list__repo-title {
+  min-width: 150px !important;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
